--- a/index.html
+++ b/index.html
@@ -1,45 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Overlay Tool</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
-    canvas {
-      border: 1px solid #ccc;
-      cursor: move;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Woohoo.</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
-  <h1>Image Overlay Tool</h1>
-  
-  <!-- Image Upload Inputs -->
-  <label>
-    Base Image: 
-    <input type="file" id="base-image" accept="image/*">
-  </label>
-  <label>
-    Overlay Image: 
-    <input type="file" id="overlay-image" accept="image/*">
-  </label>
-
-  <!-- Canvas for Editing -->
-  <canvas id="canvas" width="500" height="500"></canvas>
-
-  <!-- Save Button -->
-  <button id="save-btn">Save Image</button>
-
-  <!-- Placeholder for Download -->
-  <a id="download-link" style="display: none;">Download Final Image</a>
-
-  <script src="script.js"></script>
+    <container>
+    <h2 class="px-4 pt-4">Musings for another project:</h2>
+    <ul class="ps-5">
+    <li><a href="mv-img.html" class="mb-2">Overlay Image and move it across</a>.</li>
+    <li><a href="mv-text.html" class="mt-2">Write text and drag it across</a>.</li>
+    </ul>
+    </container>
 </body>
 </html>
