--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="mv-img.html" class="mb-2">Overlay Image and move it across</a>.</li>
     <li><a href="mv-text.html" class="mt-2">Write text and drag it across</a>.</li>
     <li><a href="using-fabric.html" class="mt-2">Overlay and move images. Also resize. Used fabric.js</a>.</li>
-
+    <li><a href="using-fabric.html-v2.html" class="mt-2">Overlay and move images. Also resize. Used fabric.js</a>.</li>
     </ul>
     </container>
 </body>
