--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <li><a href="mv-text.html" class="mt-2">Write text and drag it across</a>.</li>
     <li><a href="using-fabric.html" class="mt-2">Overlay and move images. Also resize. Used fabric.js</a>.</li>
     <li><a href="using-fabric-v2.html" class="mt-2">Overlay and move images. Also resize + text</a>.</li>
+    <li><a href="using-fabric-v3.html" class="mt-2">Latest iteration</a>.</li>
+    
     </ul>
+
     </container>
 </body>
 </html>
